log/build_2024-09-24_23-59-57/py_srvcli/stderr.log
  File "/home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/python3.12/site-packages/py_srvcli/client_member_function.py", line 22
    	future = minimal_client.send_request(int (sys argv[1]), int( sys argv[2]))
    	                                          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

